[package]
name = "mqtt-publication-storage"
version = "0.1.0"
authors = ["dmolokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
futures-util = "0.3.13"
log = "0.4.14"
crossbeam = "0.8.0"
tracing-subscriber = "0.2.17"
tracing = "0.1.25"
